--- a/outfit/templates/user_auth/base.html
+++ b/outfit/templates/user_auth/base.html
@@ -154,7 +154,7 @@
                         </div>
                       </div>
                       <div class="item " >
-                        <img src="{% static 'images/daphnea.jpg' %}" alt="" height='150px' width='400px' >
+                        <img src="{% static "images/daphnea.jpg" %}" alt="" height='150px' width='400px' >
                         <div class="carousel-caption">
                         Brouse
                         </div>
