--- a/outfit/templates/user_auth/user_activity_form.html
+++ b/outfit/templates/user_auth/user_activity_form.html
@@ -20,8 +20,8 @@
 <div class="row">
     <div class="col-md-offset-3 col-md-6">
         <div class="jumbotron">
-        <h3><u>Update User Details</u></h3>
-        <form role="form"  method="post" enctype="multipart/form-data">
+        <h3 class="text-info">Update Activity/Event</h3>
+        <form role="form"  method="post">
             <fieldset>
                 {% csrf_token %}
                {% load crispy_forms_tags %}
