--- a/outfit/templates/user_auth/index.html
+++ b/outfit/templates/user_auth/index.html
@@ -87,7 +87,8 @@
                 
             </div>
         <h4>Clothes</h4>
-        <table>
+        <div class="table-responsive">
+        <table class="table table-hover">
         {% if not activity.1 %}
             
             <span class="glyphicon glyphicon-info-sign text-error" aria-hidden="true">
@@ -118,7 +119,8 @@
         
         {% endfor %}
         </tr>
-    </table>
+        </table>
+        </div>
     <hr>
     </div>
     </div>
