--- a/outfit/templates/user_auth/index.html
+++ b/outfit/templates/user_auth/index.html
@@ -128,7 +128,7 @@
         
     {%endfor%}
     
-     <label>Label</label>
+     <label>Legend</label>
     <table>
             <tr class="bg-default">
                 <td class="bg-success">Today's Event<td>
