--- a/outfit/templates/user_auth/user_activity.html
+++ b/outfit/templates/user_auth/user_activity.html
@@ -61,7 +61,7 @@
             </div>
             </div>
             
-            <label>Label</label>
+            <label>Legend</label>
             <table>
                 <tr class="bg-default">
                     <td class="bg-info">Upcoming Events<td>
