--- a/outfit/templates/user_auth/login.html
+++ b/outfit/templates/user_auth/login.html
@@ -4,17 +4,25 @@
 
     <div class='col-md-6 col-md-offset-3'>
         <div class="jumbotron">
+        <div class="bg-danger">
+             {% if invalid %}
+            <span class='text-danger'>{{invalid}}</span><br/>
+            <span>Forgot Password ...<a href="{% url 'password_reset_recover' %}">
+                <button class="btn btn-sm btn-warning">Reset</button>
+            </a>
+            </span>
+            {% endif %}
+            
+        </div>
+       
         <h3>Login</h3>
         <form id="login_form" method="post" action="{% url 'login' %}">
              {% csrf_token %}
             <div class='form-group'>
-            {% if invalid %}
-            <p class='infoWarning'>Invalid Login details</p>
-            {% endif %}
-           
-            Username: <input type="text" class="form-control" name="username" value="" size="50" />
+            Username: <input type="text" class="form-control" name="username" value="" size="50" required
+            autofocus />
             <br />
-            Password: <input type="password" class="form-control" name="password" value="" size="50" />
+            Password: <input type="password" class="form-control" name="password" value="" size="50" required />
             <br />
             </div>
     
