added image upload preview function on clothes upload page

--- a/outfit/templates/user_auth/closet_upload.html
+++ b/outfit/templates/user_auth/closet_upload.html
@@ -22,8 +22,12 @@
         
         {% load crispy_forms_tags %}
         {% crispy clothform %}
+        <div class="col-md-3">
+        <img id="uploadPreview" style="width:250px; height: auto;" />
+        </div>
+        
         </fieldset>
-        <button type="submit" class="btn btn-success">Complete</button>
+        <button type="submit" class="btn btn-success" >Complete</button>
         </form>
         </div>
     </div>
