--- a/outfit/templates/user_auth/base.html
+++ b/outfit/templates/user_auth/base.html
@@ -133,27 +133,27 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
                       <div class="item active center-block">
-                        <img src="{% static 'images/jumper.jpg' %}" alt="" height='150px' width='400px'>
+                        <img src="{% static 'images/bitcoin.jpg' %}" alt="" >
                         <div class="carousel-caption">
                           Jumper
                         </div>
                       </div>
                       <div class="item " >
-                        <img src="{% static "images/daphnea.jpg" %}" alt="" height='150px' width='400px' >
+                        <img src="{% static "images/bitcoin.jpg" %}" alt=""  >
                         <div class="carousel-caption">
                         Brouse
                         </div>
                       </div>
                       
                       <div class="item">
-                        <img src="{% static 'images/daphnea1.jpg' %}" alt="" height='150px' width='400px'>
+                        <img src="{% static 'images/bitcoin.jpg' %}" alt="">
                         <div class="carousel-caption">
                         Daphnea
                         </div>
                       </div>
                       
                       <div class="item">
-                        <img src='{% static "images/chefammel.jpg" %}' alt="" height='150px' width='400px'>
+                        <img src='{% static "images/bitcoin.jpg" %}' alt="" >
                         <div class="carousel-caption jumbotron">
                         <h1>Daphnea</h1>
                         </div>
