--- a/outfit/templates/user_auth/base.html
+++ b/outfit/templates/user_auth/base.html
@@ -133,29 +133,36 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
                       <div class="item active center-block">
-                        <img src="{% static 'images/bitcoin.jpg' %}" alt="" >
+                        <img src="{% static 'images/1.jpg' %}" alt="" >
                         <div class="carousel-caption">
-                          Jumper
+                          Outfit ESS
                         </div>
                       </div>
                       <div class="item " >
-                        <img src="{% static "images/bitcoin.jpg" %}" alt=""  >
+                        <img src="{% static "images/2.jpg" %}" alt=""  >
                         <div class="carousel-caption">
-                        Brouse
+                        Outfit ESS
                         </div>
                       </div>
                       
                       <div class="item">
-                        <img src="{% static 'images/bitcoin.jpg' %}" alt="">
+                        <img src="{% static 'images/3.jpg' %}" alt="">
                         <div class="carousel-caption">
-                        Daphnea
+                        Outfit ESS
                         </div>
                       </div>
                       
                       <div class="item">
-                        <img src='{% static "images/bitcoin.jpg" %}' alt="" >
-                        <div class="carousel-caption jumbotron">
-                        <h1>Daphnea</h1>
+                        <img src='{% static "images/4.jpg" %}' alt="" >
+                        <div class="carousel-caption">
+                        <h1>Outfit ESS</h1>
+                        </div>
+                      </div>
+                      
+                       <div class="item">
+                        <img src='{% static "images/5.jpg" %}' alt="" >
+                        <div class="carousel-caption">
+                        <h1>Outfit ESS</h1>
                         </div>
                       </div>
                     
@@ -186,7 +193,14 @@
     <!--Google API-->
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
+    <!--table js-->
+    <script src="{{STATIC_URL}}js/tablejs/ZeroClipboard.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/tablejs/dataTables.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/tablejs/tableTools.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/tablejs/tablebootstrap.js" type="text/javascript"></script>
+    
     <!--javascript/jquery links-->
+    
     <script src="{{STATIC_URL}}js/bootstrap.min.js"></script>
     <script src="{{STATIC_URL}}js/placeautocomplete.js"></script>
     <script src="{{STATIC_URL}}js/googlemap.js"></script>
