added messages for the the suggestions

--- a/outfit/templates/user_auth/dash.html
+++ b/outfit/templates/user_auth/dash.html
@@ -65,7 +65,7 @@
             <div class="panel-heading" role="tab" id="Event_{{forloop.counter}}">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#id_{{forloop.counter}}" aria-expanded="true" aria-controls="collapseOne">
-                    {{forloop.counter}}-[{{clothi.1}}]
+                    {{forloop.counter}}-{{clothi.1}}
                     <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span>
                   </a>
                 </h4>
