--- a/outfit/templates/user_auth/index.html
+++ b/outfit/templates/user_auth/index.html
@@ -101,7 +101,7 @@
             
             <div class="col-md-4 col-md-offset-6 bg-warning">
                 {% if activity.4 %}
-                <span class="glyphicon glyphicon-info-sign" aria-hidden="true"><h4>Suggestions on clothes to add</h4>
+                <span class="glyphicon glyphicon-info-sign" aria-hidden="true">
                 </span>
                 {{activity.4}}
                 {%endif%}
