--- a/outfit/templates/user_auth/panel_reports.html
+++ b/outfit/templates/user_auth/panel_reports.html
@@ -20,7 +20,7 @@
     
 <div class="row">
     <div class='col-md-12'>
-        <h3 class='text-info'>Report</h3>
+        <h3 class='text-info'>User/System Analytics</h3>
             <div class="panel panel-default">
             <div class="table-responsive">
             <table class='table table-stripped table-hover ' id="panel_table">
@@ -75,7 +75,36 @@
             </table>
        
     </div>
-    <div id='container'>  </div>
+     <div class='col-md-12'>
+            <h3 class='text-info'>User Activities</h3>
+            <div class="table-responsive">
+            <table class='table table-stripped table-hover ' id="activity_table">
+                <thead class="active">
+                    <td>#</td>
+                    <td><strong>Category</strong></td>
+                    <td><strong>Event</strong></td>
+                    <td><strong>Location</strong></td>
+                    <td><strong>Date</strong></td>
+                    <td><strong>StartTime</strong></td>
+                </thead>
+            
+                {% for item in all_activities %}
+                    
+                    <tr>
+                        <td>{{forloop.counter}} </td>
+                        <td>{{item.category}} </td>
+                        <td>{{item.event_name}} </td>
+                        <td>{{item.event_location}} </td>
+                        <td>{{item.event_date}} </td>
+                        <td>{{item.start_time}} </td>
+                
+                    </tr>
+                {%endfor%}
+               
+            </table>
+            
+        </div>
+     </div>
 
 </div>
 {% endif %}
